WIP for #779